PortalPackage/ Enrollment Rx Core/objects/Financial_Aid_Document__c.object
<CustomObject>
    <description>ERx Custom Object</description>
    <fields>
        <fullName>ApplicantRecordId__c</fullName>
        <formula>Enrollment_Opportunity__r.Applicant__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ApplicantRecordId</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Applicant__c</fullName>
        <formula>Enrollment_Opportunity__r.Applicant__r.FirstName &amp; &quot; &quot; &amp;  Enrollment_Opportunity__r.Applicant__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Applicant</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Assigned_Financial_Aid_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ERx custom field</description>
        <label>Assigned Financial Aid User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>R00N80000002kwqiEAA</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Blocks_Admissions_Status__c</fullName>
        <description>If this document is required to be supplied before the Enrollment Opportunity can enter or pass a certain Admissions Status, fill this field out with the Status it should block.</description>
        <inlineHelpText>If this document is required to be supplied before the Enrollment Opportunity can enter or pass a certain Admissions Status, fill this field out with the Status it should block.</inlineHelpText>
        <label>Blocks Admissions Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Blocks_Financial_Aid_Status__c</fullName>
        <description>If this document is required to be supplied before the Enrollment Opportunity can enter or pass a certain Financial Aid Status, fill this field out with the Status it should block.</description>
        <inlineHelpText>If this document is required to be supplied before the Enrollment Opportunity can enter or pass a certain Financial Aid Status, fill this field out with the Status it should block.</inlineHelpText>
        <label>Blocks Financial Aid Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <description>ERx Custom Field</description>
        <label>Comments</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Date_Received__c</fullName>
        <description>ERx Custom Field</description>
        <label>Date Received</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Requested__c</fullName>
        <defaultValue>today()</defaultValue>
        <description>ERx Custom Field</description>
        <label>Date Requested</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Document_Name__c</fullName>
        <description>ERx Customer</description>
        <label>Document Name</label>
        <picklist>
            <picklistValues>
                <fullName>Credit Balance Statement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Loan Counseling Entrance Exam</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Free Application of Federal Student Aid</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Master Promissory Note</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Scholarship application</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alternative Loan Application</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Document_Status__c</fullName>
        <description>ERx Custom Field</description>
        <label>Document Status</label>
        <picklist>
            <picklistValues>
                <fullName>Required</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Ready For Approval</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Resubmit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Due_Date__c</fullName>
        <description>ERx Custom Field</description>
        <label>Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Enrollment_Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ERx Custom Field</description>
        <label>Application ID</label>
        <referenceTo>Enrollment_Opportunity__c</referenceTo>
        <relationshipLabel>Financial Aid Documents Required</relationshipLabel>
        <relationshipName>R00N80000002jvfDEAQ</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Other_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ERx Custom Field</description>
        <label>Other Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Financial Aid Documents</relationshipLabel>
        <relationshipName>R00N80000002kRT4EAM</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Financial Aid Document</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Enrollment_Opportunity__c</columns>
        <columns>Applicant__c</columns>
        <columns>Document_Name__c</columns>
        <columns>Document_Status__c</columns>
        <columns>Date_Requested__c</columns>
        <columns>Due_Date__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>FAID-{0000}</displayFormat>
        <label>Financial Aid Doc ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Financial Aid Documents</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>